# test_pytorch

./: CMakeLists.txt  README.md  main.cpp
src/: dcgan.cpp
